# chroma-qa-chat

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt
